# jpeg-converter

./: .gitignore  LICENSE  README.md  backend.py  benchmark.py  dct.py  gui.py  main.py  pyproject.toml  test.py
cli/: __init__.py  cli.py
converter/: __init__.py  backend.py  dct.py
docs/latex/: dct.tex  implementation.tex  intro.tex  main.tex  structure.tex
docs/latex/results/: first.tex  parameters.tex
gui/: gui.py
tests/: benchmark.py  parameters.py  test.py
